# Practice_2023

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ConsoleApplication4.cpp  ConsoleApplication4.vcxproj  ConsoleApplication4.vcxproj.filters  Func.cpp  Header.h  MainPract.cpp  Makefile  Practice2023.cpp  Practice_OPI  Practice_OPI.cfg  README.md  RGR.sln  RRPModuleC.cpp  RRPModuleC.h  RRProject.cpp  Rgr.sln  Source.c  Source1.cpp  UPDLucidLink_of_algorithm.md  another_one.txt  base.c  cmake_install.cmake  config.cfg  config_manager.c  config_manager.h  contacts.c  contacts.csv  contacts.h  db_manager.c  db_manager.h  db_pretty_output.c  db_pretty_output.h  employees.c  functions.c  fync.cpp  fyncc.cpp  (+18 more)
FNCTS/: FNCTS.h  FNCTS.vcxproj  FNCTS.vcxproj.filters
KeyCreate/KeyCreate/: KeyCreate.cpp
MainPractice/MainPractice/: Functions.cpp  Functions.h  MainPractice.cpp  flights.txt  key.txt
RGR/: RGR.c  RGR.cfg  RGR.cpp  RGR.vcxproj  RGR.vcxproj.filters  config.txt  key_and_functions.h  list1.csv  list2.csv
RGR/x64/Debug/: RGR.exe.recipe  RGR.ilk  vc143.idb
Rgr/: Rgr.cpp  Rgr.vcxproj  Rgr.vcxproj.filters  auction  config.txt  database.csv
Rgr/x64/Debug/: Rgr.exe.recipe  Rgr.ilk  vc143.idb
Testing/Temporary/: CTestCostData.txt
modules/: modules.c  modules.vcxproj  modules.vcxproj.filters
test/: test.cpp  test.vcxproj  test_1.c
x64/Debug/: ConsoleApplication4.exe.recipe  ConsoleApplication4.ilk  vc143.idb
x64/Debug/ConsoleA.21e8abcd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication4.lastbuildstate  (+3 more)
(+16 files in other folders)
